[package]
name = "auth-rs"
version = "0.2.0"
authors = ["Kevin Allison <kvnallsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
google = ["jsonwebtoken", "reqwest", "pem", "chrono", "parking_lot"]
password = ["rust-argon2"]
webauthn = ["x509-parser", "webpki", "untrusted", "serde_cbor", "serde_bytes", "serde_repr"]

[dependencies]
# common dependencies
base64 = "0.12.0"
rand = "0.7.3"
ring = "0.16.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
thiserror = "1"

# google dependances
chrono = { version = "0.4", optional = true }
jsonwebtoken = { version = "7", optional = true }
pem = { version = "0.8", optional = true }
parking_lot = { version= "0.11", optional = true }
reqwest = { version = "0.10", features = ["blocking", "json"], optional = true }

# password dependances
rust-argon2 = { version = "0.8.1", optional = true }

# webauth dependancies
x509-parser = { version = "0.6.2", optional = true }
webpki = { version = "0.21.2", optional = true }
untrusted = { version = "0.7.0", optional = true }
serde_cbor = { version = "0.10.2", optional = true }
serde_bytes = { version = "0.11.3", optional = true }
serde_repr = { version = "0.1.5", optional = true }
